test/runtime-integration-tests/TestPrograms/Syntax/Invalid/return_outside_function.5th
// Invalid: stray else without matching if
else return 1;
